# polygon_nautilus

./: .gitignore  .gitignore.orig  README.md  poetry.lock.orig  pyproject.toml  pyproject.toml.orig
historical_data/import_data/: get_1_min_polygon_equity_data.py  get_polygon_equity_data.py  get_polygon_equity_data.py.orig  parse_fincal_yml_data.py  parse_markethours.py  polygon_backtestengine.py  polygon_equity_data.py  polygon_equity_data.py.orig  simple_strategy.py
historical_data/import_data/classes/: VenueStatusDataWrangler.py  VenueStatusDataWrangler2.py  temp.py
nautilus_catalog/data/equity/QQQ.XNAS/: part-0.parquet
nautilus_catalog/data/instrument_status/QQQ.XNAS/: part-0.parquet
sessions_data/: sessions.pkl
