[tool.poetry]
name = "polygon-nautilus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nautilus_trader = "^1.190.0"
black = "^23.9.1"
flake8 = "^6.1.0"
polygon = "^1.1.2"  # https://github.com/pssolanki111/polygon
pandas-market-calendars = "^4.4.0"
cachetools = "^5.3.3"
prefect = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
